# code-reviewer

./: .gitignore  LICENSE  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
bot/: __init__.py
bot/cli/: __init__.py  app.py
bot/core/: __init__.py  bot.py  config.py  pipeline.py  resolver.py
tests/: conftest.py  test_bot.py  test_cli.py  test_config.py  test_pipeline.py
